@@ -443,6 +443,7 @@ matrix(c("!", "hexmode",
          "c", "warnings",
          "cbind", "data.frame",
          "chol", "default",
+         "chooseOpsMethod", "default",
          "close", "connection",
          "close", "srcfile",
          "close", "srcfilealias",
